*************************************
version-1.5.0

NEW FEATURES

   - Add Strelka config file

SIGNIFICANT USER CHANGES
   - Fix default values in `--vaf`, `--maf`, `--minDepth`, `--minAltDepth`

*************************************
version-1.4.0

SIGNIFICANT USER CHANGES

   - Add check for maf and vaf values
   - Add input file and sample name info in output

*************************************
version-1.3.0

SIGNIFICANT USER CHANGES

   - Update snpEff.yml configuration file (M. Neou/J. Wong)
   - Manage all transcripts for snpEff
   - Add pyEffGenomeSize.py script
   - Update environment.yml

*************************************
version-1.2.0

SIGNIFICANT USER CHANGES

   - Add parameter `--minAltDepth`
   - Rework filters to handle multiallelic Variants
   - Swith filter name from --minVAF & --minMAF to --vaf & --maf
   - test if the vcf contains only one sample

*************************************
version-1.1.0

SIGNIFICANT USER CHANGES

   - Remove parameters `--caller` and use `--varConfig` instead
   - Remove parameters `--annot` and use `--dbConfig` instead

BUG FIXES

   - Deal with '.' in getTag
   - Fix bug in minDepth

*************************************
version-1.0.0

   - Tested on the DRAGON data
   - Support for Annovar and snpEff databases
   - Support for Varscan2 and Mutect2